# multi-agent-workflow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  langgraph.json  otel-collector-config.yaml  presentation.html  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
evaluation/: dataset.json  run_eval.py
grafana/: dashboard-providers.yaml  datasources.yaml
grafana/dashboards/: business.json  developer-sre.json  finops.json  observability.json  operations.json
infra/terraform/environments/aws/: main.tf  terraform.tfvars.example
infra/terraform/environments/local/: main.tf
infra/terraform/modules/ecr/: main.tf
infra/terraform/modules/eks/: main.tf
k8s/: kind-cluster.yaml
k8s/aws/: agents-app.yaml  grafana.yaml  loadgen.yaml  otel-collector.yaml  service-accounts.yaml  tempo.yaml
k8s/base/: agents-app.yaml  aws-secret.yaml  grafana.yaml  jaeger.yaml  loadgen.yaml  otel-collector.yaml  prometheus.yaml
loadgen/: Dockerfile  loadgen.py
otel/: collector-config.yaml
prometheus/: prometheus.yml
scripts/: aws-deploy.sh  aws-teardown.sh  docker-compose-up.sh  local-down.sh  local-up.sh
src/: agentcore_app.py  app.py  graph.py  main.py  metrics.py  models.py  telemetry.py  tracing.py
src/agents/: billing_agent.py  order_agent.py  supervisor.py  tech_support_agent.py
src/nysummit_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: billing_tools.py  fake_data.py  kb_tools.py  order_tools.py
