[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Multi-agent customer support system with full observability"
requires-python = ">=3.11"
dependencies = [
    # Frameworks
    "langgraph>=0.4.0",
    "langchain-aws>=0.2.0",
    "crewai>=0.100.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    # HTTP server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # OpenTelemetry (traces + metrics)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-distro>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-semantic-conventions>=0.41b0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    # Framework instrumentors (auto-capture GenAI spans)
    "openinference-instrumentation-langchain>=0.1.60",
    "openinference-instrumentation-crewai>=1.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "langchain-openai>=0.3.0",
]
